Creating new config files for the Spring cloud server and adding the properties to connect to the server

--- a/spring-cloud-config-server/src/main/resources/application.properties
+++ b/spring-cloud-config-server/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 server.port=8888
-spring.cloud.config.server.profile=native
-spring.cloud.config.server.native.search-locations=file:\\\C:\Users\chara\Documents\darkerskyservice
+#spring.cloud.config.server.profile=native
+spring.cloud.config.server.git.uri=https://github.com/charanpreet16/CloudConfigRepo
+spring.cloud.config.server.git.search-paths=spring-cloud-config-server
+spring.cloud.config.server.git.username=charanpreet16
+spring.cloud.config.server.git.password=Flora1605
