--- a/spring-cloud-config-server/src/main/resources/application.properties
+++ b/spring-cloud-config-server/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 server.port=8888
 #spring.cloud.config.server.profile=native
-spring.cloud.config.server.git.uri=https://github.com/charanpreet16/CloudConfigRepo
-spring.cloud.config.server.git.search-paths=spring-cloud-config-server
-spring.cloud.config.server.git.username=charanpreet16
-spring.cloud.config.server.git.password=Flora1605
+spring.cloud.config.server.git.uri=file:///C:/config_repo
+#github.com/charanpreet16/CloudConfigRepo
+#spring.cloud.config.server.git.search-paths=spring-cloud-config-server
+#spring.cloud.config.server.git.username=charanpreet16
+#spring.cloud.config.server.git.password=Flora1605
